src/test/ui/rfc-2632-const-trait-impl/const-impl-norecover.stderr
error: expected identifier, found keyword `impl`
  --> $DIR/const-impl-norecover.rs:6:7
   |
LL | const impl Foo {
   |       ^^^^ expected identifier, found keyword

error: aborting due to previous error

